--- a/index.html
+++ b/index.html
@@ -1034,10 +1034,15 @@
             }
         });
     </script>
+    
     <!-- Rodapé -->
     <footer class="bg-white border-t mt-12 py-4 text-center text-gray-500 text-sm">
-        Copyright © 2025 Jandersson Ferreira de Paula. Todos os direitos reservados. ConsultyD.
+        Copyright © 2025 
+        <a href="https://www.consultyd.com.br" class="text-gray-500 hover:text-gray-700" target="_blank" rel="noopener noreferrer">
+            ConsultyD
+        </a>. Todos os direitos reservados.
     </footer>
+
 </body>
 </html>
 
